// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    Default
  </span>
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
<button
  className="ant-btn ant-btn-default"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span>
    Disabled
  </span>
</button>
`;

exports[`Storyshots Button Google 1`] = `
<button
  className="ant-btn google-0-2-1 ant-btn-default"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    aria-label="google"
    className="anticon anticon-google"
    role="img"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="google"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
      />
    </svg>
  </span>
  <span>
    Sign in with Google
  </span>
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="ant-btn ant-btn-primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span>
    Primary
  </span>
</button>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
<button
  className="ant-btn ant-btn-primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span>
    Primary Disabled
  </span>
</button>
`;

exports[`Storyshots Icon AWS 1`] = `
<img
  alt="aws-logo"
  height={64}
  src="aws.svg"
/>
`;

exports[`Storyshots Icon Dassana Blue 1`] = `
<img
  alt="dassana-blue"
  height={64}
  src="dassana-blue.png"
/>
`;

exports[`Storyshots Icon Dassana Orange 1`] = `
<img
  alt="dassana-orange"
  height={32}
  src="dassana-orange.png"
/>
`;

exports[`Storyshots Link Default 1`] = `
<a
  className="ant-typography"
  href=" "
  onClick={[Function]}
  style={
    Object {
      "WebkitLineClamp": null,
    }
  }
  target="_self"
>
  <u>
    Default
  </u>
</a>
`;

exports[`Storyshots Tag Colored 1`] = `
<span
  className="ant-tag ant-tag-has-color"
  style={
    Object {
      "backgroundColor": "#108ee9",
    }
  }
>
  Colored
</span>
`;

exports[`Storyshots Tag Colored Preset 1`] = `
<span
  className="ant-tag ant-tag-blue"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  Blue
</span>
`;

exports[`Storyshots Tag Default 1`] = `
<span
  className="ant-tag"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  Default
</span>
`;

exports[`Storyshots Toggle Checked Disabled 1`] = `
<button
  aria-checked={true}
  className="ant-switch ant-switch-checked ant-switch-disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  role="switch"
  type="button"
>
  <div
    className="ant-switch-handle"
  />
  <span
    className="ant-switch-inner"
  />
</button>
`;

exports[`Storyshots Toggle Default 1`] = `
<button
  aria-checked={true}
  className="ant-switch ant-switch-checked"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="switch"
  type="button"
>
  <div
    className="ant-switch-handle"
  />
  <span
    className="ant-switch-inner"
  />
</button>
`;

exports[`Storyshots Toggle Disabled 1`] = `
<button
  aria-checked={false}
  className="ant-switch ant-switch-disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  role="switch"
  type="button"
>
  <div
    className="ant-switch-handle"
  />
  <span
    className="ant-switch-inner"
  />
</button>
`;
